--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
-        "bootstrap": "^4.1.1"
+        "bootstrap": "^4.1.1",
+        "vue-router": "^3.0.1"
     }
 }
